--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
-    "start:dev": "node src/server/index"
+    "start:dev": "nodemon src/server/index"
   },
   "keywords": [],
   "author": "",
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "sass-loader": "^7.3.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
