--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.2",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "history": "^5.0.0",
     "ignore-styles": "^5.0.1",
     "md5": "^2.3.0",
